Ajout tous les parametres demarrage, script pour init.d

--- a/etc/mg-appareils.conf
+++ b/etc/mg-appareils.conf
@@ -7,6 +7,13 @@ export MG_MONGO_SSL=nocert
 export MG_MONGO_USER=garage
 export MG_MONGO_PASSWORD=PWD_MONGO_NODE
 
-SENSEUR_NO=25
-SENSEUR_PIN=24
+# Enlever le # pour activer hub nRF24L01
+# export NRF24=on
+
+# Mettre la liste des _id mongo des senseurs (separer par espaces)
+# export LCDDOC=""
+
+# Activer senseur AM2302 local avec ces parametres
+# SENSEUR_NO=25
+# SENSEUR_PIN=24
 
