Refact code pour passer de NOM_MILLEGRILLE a IDMG

--- a/etc/mg-appareils.conf
+++ b/etc/mg-appareils.conf
@@ -1,4 +1,4 @@
-export MG_NOM_MILLEGRILLE=maple
+export MG_IDMG=maple
 export MG_MQ_HOST=127.0.1.1
 export MG_MQ_USER=garage
 export MG_MQ_PASSWORD=PWD_MQ_NODE
