Ajout sciprts/config pour demarrer noeud RPi

--- a/etc/mg-noeud.conf
+++ b/etc/mg-noeud.conf
@@ -6,3 +6,9 @@ export MG_MQ_KEYFILE=/var/opt/millegrilles/${IDMG}/pki/keys/pki.noeud.key.pem
 export MG_MQ_CERTFILE=/var/opt/millegrilles/${IDMG}/pki/certs/pki.noeud.cert.pem
 export MG_MQ_SSL=on
 export MG_MQ_AUTH_CERT=on
+
+# Ajouter options ici :
+# --rf24master
+# --lcd
+# etc
+export MGRPI_OPTIONS=--rf24master
