Ajout image de base

--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -1,4 +1,4 @@
-FROM docker.maceroc.com/millegrilles_consignation_python_main:1.34.4
+FROM docker.maceroc.com/millegrilles_senseurspassifs_base:armv7l_1.34.0
 
 ENV MG_CONFIG=/opt/millegrilles/config \
     MG_MQ_SSL=on \
@@ -6,42 +6,18 @@ ENV MG_CONFIG=/opt/millegrilles/config \
     MG_MQ_EXCHANGE_DEFAUT=2.prive
 
 VOLUME /opt/millegrilles/config
+USER root
 
 ADD . /opt/src
 
-USER root
-
-RUN export http_proxy=http://fs2.maple.maceroc.com:8000 && \
-    mkdir -p /opt/src/tmp && \
-    git -C /opt/src/tmp clone -b python --single-branch https://github.com/dugrema/arduinolibs.git && \
-    git -C /opt/src/tmp clone --single-branch https://github.com/nRF24/RF24.git && \
-    git -C /opt/src/tmp clone --single-branch https://github.com/adafruit/Adafruit_Python_DHT.git && \
-    \
-    apt update && \
-    apt install -y libboost-python1.67 libxml2 libxmlsec1 i2c-tools \
-                   rpi.gpio python3-rpi.gpio \
-                   python3-smbus python3-cffi python3-setuptools && \
-    pip3 install rpi.gpio && \
-    \
-    cd /opt/src/tmp/RF24 && \
-    ./configure --driver=RPi && \
-    make install && \
-    cd pyRF24 && \
+RUN cd /opt/src/git/millegrilles.consignation.python && \
+    pip3 install -r requirements.txt && \
     python3 setup.py install && \
     \
     cd /opt/src/python && \
     pip3 install -r requirements.txt && \
     python3 setup.py install && \
     \
-    cd /opt/src/tmp/Adafruit_Python_DHT && \
-    python3 setup.py install && \
-    \
-    cd /opt/src/tmp/arduinolibs/libraries/CryptoLW/python && \
-    python3 setup.py install && \
-    \
     mkdir -p /opt/millegrilles/config && \
     \
-    cd / \
-    apt remove -y libboost1.67-dev python3-setuptools && \
-    rm -rf /var/apt/cache/* /var/lib/apt/lists/* && \
     rm -rf /opt/src
