--- a/base/Dockerfile.armv7l
+++ b/base/Dockerfile.armv7l
@@ -1,15 +1,20 @@
-FROM docker.maceroc.com/millegrilles_consignation_python_main:1.34.7
+FROM docker.maceroc.com/millegrilles_consignation_python:1.33.1
 
-ADD requirements.txt .
-ADD git/* /opt/src/tmp
+USER root
+
+COPY git/ /opt/src/tmp/
+COPY requirements.txt .
 
 RUN export http_proxy=http://fs2.maple.maceroc.com:8000 && \
+	\
+    pip3 install -r requirements.txt && \
+    \
+    mkdir -p /opt/millegrilles/config && \
     \
     apt update && \
     apt install -y libboost-python1.67 libxml2 libxmlsec1 i2c-tools \
                    rpi.gpio python3-rpi.gpio \
                    python3-smbus python3-cffi python3-setuptools && \
-    pip3 install -r requirements && \
     \
     cd /opt/src/tmp/RF24 && \
     ./configure --driver=RPi && \
@@ -17,17 +22,11 @@ RUN export http_proxy=http://fs2.maple.maceroc.com:8000 && \
     cd pyRF24 && \
     python3 setup.py install && \
     \
-    cd /opt/src/python && \
-    pip3 install -r requirements.txt && \
-    python3 setup.py install && \
-    \
     cd /opt/src/tmp/Adafruit_Python_DHT && \
     python3 setup.py install && \
     \
     cd /opt/src/tmp/arduinolibs/libraries/CryptoLW/python && \
     python3 setup.py install && \
-    \
-    mkdir -p /opt/millegrilles/config && \
     \
     cd / \
     apt remove -y libboost1.67-dev python3-setuptools && \
