--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -1,4 +1,4 @@
-FROM docker.maceroc.com/millegrilles_consignation_python_main:1.39.3
+FROM docker.maceroc.com/millegrilles_senseurspassifs_base:armv7l_1.39.0
 
 ENV MG_CONFIG=/opt/millegrilles/config \
     MG_MQ_SSL=on \
