--- a/Dockerfile.armv7l
+++ b/Dockerfile.armv7l
@@ -1,4 +1,4 @@
-FROM docker.maceroc.com/millegrilles_senseurspassifs_base:armv7l_1.40.1
+FROM docker.maceroc.com/millegrilles_senseurspassifs_base:armv7l_1.45.0
 
 ENV MG_CONFIG=/opt/millegrilles/config \
     MG_MQ_SSL=on \
@@ -10,12 +10,19 @@ USER root
 
 ADD . /opt/src
 
-RUN cd /opt/src/git/millegrilles.consignation.python && \
-    python3 setup.py install && \
-    \
-    cd /opt/src/python && \
+RUN cd /opt/src/python && \
     python3 setup.py install && \
     \
     mkdir -p /opt/millegrilles/config && \
     \
     rm -rf /opt/src
+
+#RUN cd /opt/src/git/millegrilles.consignation.python && \
+#    python3 setup.py install && \
+#    \
+#    cd /opt/src/python && \
+#    python3 setup.py install && \
+#    \
+#    mkdir -p /opt/millegrilles/config && \
+#    \
+#    rm -rf /opt/src
